rettet discord links

--- a/server_resources.cfg
+++ b/server_resources.cfg
@@ -68,7 +68,9 @@ start hp_takeoff
 start cwradargun
 start els-fivem
 start iplLoader
-start map
+start RichPresence
+start lmc_snow
+start lmc_emote
 
 ##Restarts
 restart sessionmanager
